--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "naives": "sucrase-node src/naives-solution/index.js"
+    "naives": "sucrase-node src/naives-solution/index.js",
+    "bg-proccess": "sucrase-node src/background-proccess/index.js"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
@@ -14,5 +15,8 @@
     "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2",
     "sucrase": "^3.10.1"
+  },
+  "dependencies": {
+    "worker-farm": "^1.7.0"
   }
 }
